@@ -16,6 +16,7 @@ Version CVS HEAD (?)
       all the samples that belong to that group
     - fixed crash which occured on interfering File::DeleteSample() and
       File::GetNextSample() calls (due to iterator invalidation)
+    - fixed group names which were not saved
 
   * src/RIFF.cpp, src/RIFF.h:
     - fixed RIFF::Chunk destructor which did not unregister previously
